# Metatrade.Python.Framework.2

./: .env.example  .gitignore  IMPLEMENTACIOS_TERV_HU.md  IMPLEMENTATION_PLAN.md  Makefile  PHASE1_IMPLEMENTATION_REPORT.md  PHASE4_IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  WINDOWS_USAGE.md  alembic.ini  config.json  create_database.py  debug_import.py  pyproject.toml  pytest.ini  run_gui.py  setup.py  start_all_services.bat  start_all_services.ps1  start_all_services.sh  stop_all_services.bat  stop_all_services.ps1  stop_all_services.sh  test_all_services.bat  test_all_services.ps1  test_all_services.sh  test_backtesting_service.py  test_logger_fix.py  test_pydantic_import.py  test_services.py
.claude/: settings.local.json
.claude/agents/: ai-forex-service-architect.md  angular-frontend-architect.md  backend-api-orchestrator.md  backend-engineer.md  backtesting-service-architect.md  business-to-tech-translator.md  data-service-architect.md  mt5-service-architect.md  pattern-indicator-service.md  strategy-service-architect.md  system-architect.md  ux-ui-designer.md
config/: base.yaml  development.yaml  indicators.yaml  logging.yaml  patterns.yaml  strategies.yaml  testing.yaml
docs/: kiegeszites-config-realtime-performance.md  projekt-dokumentacio.md  ugynok-ai-service.md  ugynok-backend-api.md  ugynok-backtesting-service.md  ugynok-data-service.md  ugynok-frontend.md  ugynok-mt5-service.md  ugynok-pattern-service.md  ugynok-strategy-service.md
docs/architecture/: database-architecture.md  phase5-enterprise-architecture.md  phase5-ml-ai-pipeline.md  phase5-trading-engine.md  phase6-quantum-architecture.md  symbol-management.md  tick-ohlc-management.md
docs/phase4/: BACKEND_IMPLEMENTATION.md
examples/: phase4_backend_example.py
frontend/: package-lock.json  package.json
frontend/src/environments/: environment.prod.ts  environment.ts
requirements/: base.txt  base_linux.txt  development.txt  production.txt  testing.txt
scripts/: check_deps.py  run_tests.py  setup_env.py
services/ai-service/: API_REFERENCE.md  README_IMPLEMENTATION.md  main.py  requirements.txt
services/backend-api/: config.json  main.py  requirements.txt
services/backend-api/app/: __init__.py
services/backtesting-service/: main.py  requirements.txt
services/backtesting-service/app/: __init__.py
services/data-service/: main.py  requirements.txt
services/data-service/app/: __init__.py
services/mt5-service/: main.py  requirements.txt
services/mt5-service/app/: __init__.py
services/pattern-service/: API_ENDPOINTS.txt  main.py  requirements.txt  test_pattern_service.py
services/pattern-service/app/: __init__.py
services/strategy-service/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  main.py  test_strategy_service.py
services/strategy-service/app/: __init__.py
shared/: __init__.py
shared/config/: __init__.py
shared/models/: __init__.py
shared/utils/: __init__.py
src/: __init__.py
src/ai/: __init__.py  transformer_models.py
src/blockchain/: __init__.py  defi_protocols.py
src/core/: __init__.py  backend_service.py  phase3_coordinator.py
src/core/config/: __init__.py  advanced_config_manager.py  config_loader.py  settings.py  validation.py
src/core/data/: __init__.py  buffer.py  collector.py  events.py  models.py  ohlc_processor.py
src/core/exceptions/: __init__.py  base.py  connection.py  mt5.py  trading.py
src/core/logging/: __init__.py  advanced_logger.py  formatters.py  handlers.py  logger_factory.py
src/core/performance/: __init__.py  cache.py  circuit_breaker.py  monitor.py  optimizer.py  profiler.py
src/core/pipeline/: __init__.py  enrichers.py  market_data_processor.py  ohlc_aggregator.py  pipeline.py  processor.py  tick_processor.py  transformers.py  validators.py
src/core/streaming/: __init__.py  realtime_data_streamer.py
src/core/symbols/: __init__.py  manager.py  models.py  monitor.py  subscriber.py
src/core/sync/: __init__.py  backfill.py  detector.py  historical_sync_manager.py  manager.py  validator.py
src/core/tasks/: __init__.py  decorators.py  manager.py  models.py  queue.py  scheduler.py  worker.py
src/core/utils/: __init__.py  decorators.py  helpers.py  validators.py
src/database/: __init__.py  connection_manager.py  database.py
src/database/cache/: __init__.py  cache_manager.py  redis_client.py
src/database/migrations/: env.py  migration_manager.py
src/database/models/: __init__.py  accounts.py  base.py  market_data.py  mixins.py  strategies.py  symbols.py  system.py  trading.py
src/database/persistence/: market_data_persistence.py
src/database/schemas/: __init__.py  accounts.py  base.py  symbols.py
src/database/services/: __init__.py  accounts.py  base.py  symbols.py
src/edge/: __init__.py  edge_processor.py
src/gui/: __init__.py  app.py  integration.py  main.py  main_window.py
src/gui/localization/: __init__.py  (+2 more)
src/indicators/: __init__.py  base.py  macd.py  macd_analyzer.py  manager.py  trend.py
src/mt5/: streaming.py
src/quantum/: __init__.py  quantum_ml.py  quantum_optimizer.py
src/security/: __init__.py  post_quantum_crypto.py
src/trading/: __init__.py  data_processor.py  metrics_collector.py  ml_pipeline.py  order_manager.py  portfolio_optimizer.py  risk_manager.py  trading_engine.py  types.py
tests/: conftest.py  run_tests.py  test_database_integration.py  test_phase5_integration.py
tests/performance/: test_database_performance.py
(+91 files in other folders)
